// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TunerMeter renders correctly when in tune 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm w-96 mx-auto"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="font-semibold text-center text-3xl"
        data-slot="card-title"
      >
        C4
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center p-6"
      data-slot="card-content"
    >
      <div
        class="relative w-48 h-24 overflow-hidden mb-4"
      >
        <svg
          class="absolute top-0 left-0 w-full h-full"
          viewBox="0 0 100 50"
        >
          <path
            d="M 0 50 A 50 50 0 0 1 100 50 L 0 50 Z"
            fill="#e0e0e0"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="90"
            x2="95"
            y1="50"
            y2="50"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="78.2842712474619"
            x2="81.81980515339464"
            y1="78.2842712474619"
            y2="81.81980515339464"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="50"
            x2="50"
            y1="90"
            y2="95"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="21.7157287525381"
            x2="18.180194846605364"
            y1="78.2842712474619"
            y2="81.81980515339464"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="10"
            x2="5"
            y1="50.00000000000001"
            y2="50.00000000000001"
          />
          <line
            stroke="green"
            stroke-linecap="round"
            stroke-width="2"
            style="transform-origin: 50px 50px; transform: rotate(4.5deg); transition: transform 0.1s ease-out, stroke 0.1s ease-out;"
            x1="50"
            x2="50"
            y1="50"
            y2="10"
          />
          <circle
            cx="50"
            cy="50"
            fill="black"
            r="2"
          />
        </svg>
      </div>
      <p
        class="text-xl font-semibold text-center mt-2"
      >
        +5.00%
      </p>
      <p
        class="text-lg text-green-600"
      >
        In Tune
      </p>
    </div>
  </div>
</div>
`;

exports[`TunerMeter renders correctly when out of tune 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm w-96 mx-auto"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="font-semibold text-center text-3xl"
        data-slot="card-title"
      >
        G#3
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center p-6"
      data-slot="card-content"
    >
      <div
        class="relative w-48 h-24 overflow-hidden mb-4"
      >
        <svg
          class="absolute top-0 left-0 w-full h-full"
          viewBox="0 0 100 50"
        >
          <path
            d="M 0 50 A 50 50 0 0 1 100 50 L 0 50 Z"
            fill="#e0e0e0"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="90"
            x2="95"
            y1="50"
            y2="50"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="78.2842712474619"
            x2="81.81980515339464"
            y1="78.2842712474619"
            y2="81.81980515339464"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="50"
            x2="50"
            y1="90"
            y2="95"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="21.7157287525381"
            x2="18.180194846605364"
            y1="78.2842712474619"
            y2="81.81980515339464"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="10"
            x2="5"
            y1="50.00000000000001"
            y2="50.00000000000001"
          />
          <line
            stroke="red"
            stroke-linecap="round"
            stroke-width="2"
            style="transform-origin: 50px 50px; transform: rotate(-45deg); transition: transform 0.1s ease-out, stroke 0.1s ease-out;"
            x1="50"
            x2="50"
            y1="50"
            y2="10"
          />
          <circle
            cx="50"
            cy="50"
            fill="black"
            r="2"
          />
        </svg>
      </div>
      <p
        class="text-xl font-semibold text-center mt-2"
      >
        -50.00%
      </p>
      <p
        class="text-lg text-red-600"
      >
        Out of Tune
      </p>
    </div>
  </div>
</div>
`;

exports[`TunerMeter renders correctly with no deviation 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm w-96 mx-auto"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="font-semibold text-center text-3xl"
        data-slot="card-title"
      >
        A4
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center p-6"
      data-slot="card-content"
    >
      <div
        class="relative w-48 h-24 overflow-hidden mb-4"
      >
        <svg
          class="absolute top-0 left-0 w-full h-full"
          viewBox="0 0 100 50"
        >
          <path
            d="M 0 50 A 50 50 0 0 1 100 50 L 0 50 Z"
            fill="#e0e0e0"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="90"
            x2="95"
            y1="50"
            y2="50"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="78.2842712474619"
            x2="81.81980515339464"
            y1="78.2842712474619"
            y2="81.81980515339464"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="50"
            x2="50"
            y1="90"
            y2="95"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="21.7157287525381"
            x2="18.180194846605364"
            y1="78.2842712474619"
            y2="81.81980515339464"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="10"
            x2="5"
            y1="50.00000000000001"
            y2="50.00000000000001"
          />
          <line
            stroke="gray"
            stroke-linecap="round"
            stroke-width="2"
            style="transform-origin: 50px 50px; transform: rotate(0deg); transition: transform 0.1s ease-out, stroke 0.1s ease-out;"
            x1="50"
            x2="50"
            y1="50"
            y2="10"
          />
          <circle
            cx="50"
            cy="50"
            fill="black"
            r="2"
          />
        </svg>
      </div>
      <p
        class="text-xl font-semibold text-center mt-2"
      >
        --.--%
      </p>
      <p
        class="text-lg text-gray-500"
      >
        No Sound
      </p>
    </div>
  </div>
</div>
`;
